Add reset endpoint
